# Minuit2

./: CMakeLists.txt  Minuit2Config.cmake.in  StandAlone.cmake
src/: CMakeLists.txt
src/math/: CMakeLists.txt
test/: CMakeLists.txt
